HEAD
	+ Added backup domain
2.0.6
	+ Check for incompatibility between PDC and PAM on slaves
	+ Improved performance by adding samba LDAP indexes
	+ Only set shares ACL if needed
	+ Set default order for dashboard widgets
2.0.5
	+ Only ASCII characters are now allowed for share names and comments
	+ Bug fix: guest shares also work if PDC not enabled
2.0.4
	+ Fixed quarantine folder permissions
	+ Don't ask for password in guest shares
2.0.3
	+ Bug fix: guest shares now work on Windows clients
	+ Fixed log retrieving for quarantine alerts
2.0.2
	+ Fixed problems in backup restoration
	+ Bug fix: support users and groups with spaces and so on in ACLs
2.0.1
	+ Bug fix: cups daemon is now started before samba one
	+ Bug fix: samba can be enabled now if filesystem does not support quotas
	+ Removed warning due to mix numeric and string values in printer hash.
	+ New CUPS printers are also stored in redis when editing groups
	+ Deleted obsolete code regarding external/non-external printers
1.5.9
	+ Rebranded domain name and description
1.5.8
	+ Zentyal rebrand
	+ On smb.conf.mas: use client driver = no to allow printer server
	  to give clients the uploaded drivers.
1.5.7
	+ Avoid antivirus scan on large files to fix read problems
	+ Add a keyconf to Samba listen on external interfaces
	+ Added more report subsections
1.5.6
	+ Move NSS from ebox-samba to ebox-usersandgroups
	+ Home directories are under /home now
	+ Shares permissions model now states if the ACL is for a user or a group
1.5.5
	+ Bug fix: set proper permissions on guest shares
	+ Bug fix: avoid parse of non-word characters in vscan log entries
1.5.4
	+ Added bridged mode support in firewall helper
1.5.3
	+ Bug fix: do not add acl attribute in /etc/fstab when using xfs
1.5.2
	+ Enforce uniqueness of 'user/group' filed in shares permissions
	+ Enable full audit feature as it's working again in samba 3.4.6
	+ Allow guest shares
1.5.1
	+ Add support for file system ACLs. Modify /etc/fstab